# classic-games

./: .clinerules  LICENSE  README.md  environment.yml  main.py  pyproject.toml  setup.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/games/breakout/: README.md  ball.py  brick.py  constants.py  game.py  main.py  paddle.py
src/games/pong/: ball.py  constants.py  game.py  main.py  paddle.py
src/games/snake/: README.md  food.py  game.py  main.py  snake.py
src/games/tictactoe/: README.md  constants.py  game.py  main.py
ttanh_games/: commons.py  constants.py
ttanh_games/breakout/: README.md  ball.py  brick.py  constants.py  game.py  main.py  paddle.py
ttanh_games/pong/: README.md  ball.py  constants.py  game.py  main.py  paddle.py
ttanh_games/snake/: README.md  constants.py  food.py  game.py  main.py  snake.py
ttanh_games/tictactoe/: README.md  constants.py  game.py  main.py
