[project]
name = "classic-games"
version = "0.1.0"
description = ""
authors = [
    {name = "Kokoroou",email = "truongtuananhsamson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
